add meson build and build script

--- a/meson.build
+++ b/meson.build
@@ -1,7 +1,20 @@
-project('repo1')
+project(
+  'repo1',
+  'cpp'
+)
 
 
 run_command('./gen_files.sh')
 
+include_dir = 'foo/bar'
+includes = include_directories(include_dir)
 
+repo1_lib = static_library(
+  'repo1Lib', 
+  include_directories: includes,
+)
 
+repo1_dep = declare_dependency(
+  include_directories: includes,
+  link_with: repo1_lib,
+)
